# web-django

./: .env-sample  .python-version  build.sh  manage.py  pyproject.toml  render.yaml
djweb/: asgi.py  conf.py  settings.py  urls.py  wsgi.py
render/: views.py
render/templates/render/: index.html
